--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,8 @@ $typographic-font-weight: normal;
 $typographic-heading-1-font-size: 48px;
 $typographic-heading-2-font-size: 32px;
 $typographic-heading-3-font-size: 24px;
-$typographic-body-text-font-size: 20px;
+$typographic-body-text-font-size: 18px;
+$typographic-desktop-body-text-font-size: 20px;
 
 $typographic-heading-1-line-height: 56px;
 $typographic-heading-2-line-height: 40px;
